tests/invalid/trait/method_call_explicit_ufcs_generic_trait_method_type_args_arity.facet
trait Project<T> {
  fn project<U>(self: Self, value: unrestricted U) -> unrestricted U;
}

impl Project<unrestricted isize> for unrestricted isize {
  fn project<U>(self: Self, value: unrestricted U) -> unrestricted U {
    value
  }
}

fn main(x: unrestricted isize) -> unrestricted bool {
  (<unrestricted isize as Project<unrestricted isize>>::project<unrestricted bool, unrestricted isize> x true)
}
